# gestion-quantitative

./: .gitignore  1-backtesting.ipynb  Menu.py  README.md  app.py  main.py  pyproject.toml  secret.py.example
.archives/: 3_Analyse.py  app.py  app_.py
data/csv_results/: AAPL_BollingerStrategy_holdbars1_stats.csv  AAPL_BollingerStrategy_holdbars1_trades.csv  AAPL_BollingerStrategy_holdbars5_stats.csv  AAPL_BollingerStrategy_holdbars5_trades.csv  AAPL_Momentum1DayStrategy_holdbars1_stats.csv  AAPL_Momentum1DayStrategy_holdbars1_trades.csv  AAPL_Momentum1DayStrategy_holdbars5_stats.csv  AAPL_Momentum1DayStrategy_holdbars5_trades.csv  AAPL_Momentum5DaysStrategy_holdbars1_stats.csv  AAPL_Momentum5DaysStrategy_holdbars1_trades.csv  AAPL_Momentum5DaysStrategy_holdbars5_stats.csv  AAPL_Momentum5DaysStrategy_holdbars5_trades.csv  AAPL_RSIStrategy_holdbars1_stats.csv  AAPL_RSIStrategy_holdbars1_trades.csv  AAPL_RSIStrategy_holdbars5_stats.csv  AAPL_RSIStrategy_holdbars5_trades.csv  AAPL_StochasticRStrategy_holdbars1_stats.csv  AAPL_StochasticRStrategy_holdbars1_trades.csv  AAPL_StochasticRStrategy_holdbars5_stats.csv  AAPL_StochasticRStrategy_holdbars5_trades.csv  AAPL_TDIStrategy_holdbars1_stats.csv  AAPL_TDIStrategy_holdbars1_trades.csv  AAPL_TDIStrategy_holdbars5_stats.csv  AAPL_TDIStrategy_holdbars5_trades.csv  (+46 more)
docs/: TP2_Exemple_H2025.R
models/: DecisionTree.onnx  GradientBoosting.onnx  Logistic.onnx  RandomForest.onnx
notebook/: 1-backtesting.ipynb  2-modelisation.ipynb  3-mean.ipynb
pages/: 1_Stratégie de trading.py  2_Modélisation.py
src/: test.py
(+245 files in other folders)
