[project]
name = "gestion-quantitative"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "backtesting>=0.6.4",
    "ipykernel>=6.29.5",
    "onnxruntime>=1.20.1",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "streamlit>=1.44.1",
    "ta>=0.11.0",
    "yfinance>=0.2.56",
]
